src/logs/error/2024-03-17.log
2024-03-17 01:00:08 error: uncaughtException: Unexpected token '*'
G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:44
   * @param {*} ArticleRepository 
   ^

SyntaxError: Unexpected token '*'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1126:15)
    at Module._compile (node:internal/modules/cjs/loader:1162:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1252:10)
    at Module.load (node:internal/modules/cjs/loader:1076:32)
    at Function.Module._load (node:internal/modules/cjs/loader:911:12)
    at Module.require (node:internal/modules/cjs/loader:1100:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:5:24)
    at Module._compile (node:internal/modules/cjs/loader:1198:14)
2024-03-17 02:52:10 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:11 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:17 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:17 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:17 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:19 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:19 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:19 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:40 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:52:40 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:112:28),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:54:23 error: Error: Resource not found,    at notFound (G:\Programming\projects\FullStack\MERN Blog\server\src\utils\error.js:15:17),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:107:13),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:54:23 error: Error: Resource not found,    at notFound (G:\Programming\projects\FullStack\MERN Blog\server\src\utils\error.js:15:17),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:107:13),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:55:02 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:108:28),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
2024-03-17 02:55:02 error: TypeError: Cannot read properties of undefined (reading 'total'),    at ArticleService.getByAuthor (G:\Programming\projects\FullStack\MERN Blog\server\src\service\ArticleService.js:108:28),    at processTicksAndRejections (node:internal/process/task_queues:96:5),    at async G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:56:16
